Fixing overflow

--- a/styles/header.css
+++ b/styles/header.css
@@ -5,6 +5,10 @@
   @media (max-width: 992px) {
     padding-right: 25px;
   }
+  @media (max-width: 375px) {
+    padding-left: 18px;
+    padding-right: 0px;
+  }
   align-items: center;
   justify-content: space-between;
   position: fixed;
@@ -32,12 +36,15 @@
   background: none;
   border: none;
   position: absolute;
-  top: 15px;
+  top: 17px;
   right: 19px;
   display: none;
   width: 37px;
   @media (min-width: 768px) {
     display: none;
+  }
+  @media (max-width: 375px) {
+    right: 20px;
   }
   vertical-align: middle;
   cursor: pointer;
@@ -92,16 +99,16 @@ nav a {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: auto;
   font-weight: 700;
   margin-left: 184px;
   @media (max-width: 768px) {
-    margin-left: 0;
+    margin-left: 50px;
     margin-right: 60px;
   }
   @media (max-width: 992px) and (max-width: 768px) {
     margin-left: 50px;
   }
-  min-width: 200px;
   flex: 1;
   cursor: pointer;
 }
