--- a/styles/styles-1.css
+++ b/styles/styles-1.css
@@ -291,6 +291,12 @@
     width: 100%;
     padding: 10px;
   }
+  @media (max-width: 375px) {
+    margin: auto;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    width: 100%;
+    padding: 5px;
+  }
   font-size: 2.7rem;
   text-align: left;
   margin-top: 20px;
@@ -363,6 +369,9 @@
   position: absolute;
   padding: 24px;
   padding-top: 16px;
+  @media (max-width: 375px) {
+    height: 50%;
+  }
   padding-bottom: 27px;
   left: 0;
   right: 0;
@@ -376,6 +385,9 @@
   padding-bottom: 10px;
   height: 120px;
   @media (min-width: 992px) {
+    height: 160px;
+  }
+  @media (max-width: 480px) {
     height: 160px;
   }
 }
@@ -437,6 +449,9 @@
 .contact-form-div {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  @media (max-width: 375px) {
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  }
 }
 .contact-form,
 .contact-form-txt {
@@ -636,4 +651,15 @@
 }
 .carousel-button.next {
   right: 1rem;
+}
+.h-captcha iframe {
+  @media (max-width: 380px) {
+    transform: scale(0.85);
+    transform-origin: 0 0;
+  }
+}
+.h-captcha {
+  @media (max-width: 380px) {
+    max-width: 80px;
+  }
 }
